@@ -1634,12 +1634,12 @@ end</example>
 		<command id="getmenuitemextra">
 			<canon>get menu item extra(menu item handle, extra)</canon>
 			<shortname>get menu item extra</shortname>
-			<description>Given a <p>menu item handle</p> (for example, the one returned by <ref>selectedmenuitem</ref>), and an <p>extra</p> data number which can be 0, 1, or 2, Return the the number stored in the extra data space. This extra data has no meaning of its own, and is just useful for advanced menu scripting.</description>
+			<description>Given a <p>menu item handle</p> (for example, the one returned by <ref>selectedmenuitem</ref>), and an <p>extra</p> data number which can be 0, 1, or 2, return the the number stored in the extra data space. This extra data has no meaning of its own, and is just useful for advanced menu scripting.</description>
 		</command>
 		<command id="setmenuitemextra">
 			<canon>set menu item extra(menu item handle, extra, num)</canon>
 			<shortname>set menu item extra</shortname>
-			<description>Given a <p>menu item handle</p> (for example, the one returned by <ref>selectedmenuitem</ref>), and an <p>extra</p> data number which can be 0, 1, or 2, Change the number stored in the extra data space to <p>num</p>. This extra data has no meaning of its own, and is just useful for advanced menu scripting.</description>
+			<description>Given a <p>menu item handle</p> (for example, the one returned by <ref>selectedmenuitem</ref>), and an <p>extra</p> data number which can be 0, 1, or 2, change the number stored in the extra data space to <p>num</p>. This extra data has no meaning of its own, and is just useful for advanced menu scripting.</description>
 		</command>
 		<command id="getmenubit">
 			<canon>get menu bit(menu handle, bit)</canon>
@@ -2689,6 +2689,19 @@ end
 				<ref>ysortchildren</ref>
 			</seealso>
 		</command>
+		<command id="setsliceextra">
+			<canon>set slice extra (handle, extra, value)</canon>
+			<shortname>set slice extra</shortname>
+			<description>Sets one of three extra data variables that every slice has, on the slice <p>handle</p>. <p>extra</p> is a number from 0 to 2 which indicates which extra data field to write  (you may also use the constants <p>extra1</p>, <p>extra2</p>, <p>extra3</p>). The extra data has no meaning to the slice, it is only for use by scripts.</description>
+			<seealso>
+				<ref>getsliceextra</ref>
+			</seealso>
+		</command>
+		<command id="getsliceextra">
+			<canon>get slice extra (handle, extra)</canon>
+			<shortname>get slice extra</shortname>
+			<description>Retrieve an extra data value previously set on a slice <p>handle</p> with <ref>setsliceextra</ref>. <p>extra</p> is a number from 0 to 2 which indicates which extra data field to read.</description>
+		</command>
 		<command id="getrectstyle">
 			<canon>get rect style (handle)</canon>
 			<shortname>get rect style</shortname>
@@ -3003,17 +3016,17 @@ end
 			<description>Returns the walking frame (0 or 1) of the specified NPC.</description>
 		</command>
 		<command id="npcextra">
-			<canon>NPC extra (who,which)</canon>
+			<canon>NPC extra (who, which)</canon>
 			<shortname>NPC extra</shortname>
-			<description>Returns the npc instance-specific extra data field requested in <p>which</p>. You may use the constants <p>extra1</p> and <p>extra2</p> to refer to them. If you use an NPC ID for <p>who</p>, the first instance's data will be used.</description>
+			<description>Returns the npc instance-specific extra data field requested in <p>which</p>, a number from 0 to 2. You may use the constants <p>extra1</p>, <p>extra2</p> and <p>extra3</p> to refer to them. If you use an NPC ID for <p>who</p>, the first instance's data will be used.</description>
 			<seealso>
 				<ref>setnpcextra</ref>
 			</seealso>
 		</command>
 		<command id="setnpcextra">
-			<canon>set NPC extra (who,which, value)</canon>
+			<canon>set NPC extra (who, which, value)</canon>
 			<shortname>set NPC extra</shortname>
-			<description>Sets the npc instance-specific extra data field requested in <p>which</p>. You may use the constants <p>extra1</p> and <p>extra2</p> to refer to them.  If you use an NPC ID for <p>who</p>, the first instance's data will be used.</description>
+			<description>Sets the npc instance-specific extra data field requested in <p>which</p>, a number from 0 to 2. You may use the constants <p>extra1</p>, <p>extra2</p> and <p>extra3</p> to refer to them.  If you use an NPC ID for <p>who</p>, the first instance's data will be used.<note>Unlike other NPC instance data, the extra data for NPCs on the current map is not saved in save games! However, it is saved in mapstate NPC saves (see <ref>savemapstate</ref>)</note></description>
 			<seealso>
 				<ref>npcextra</ref>
 			</seealso>
