@@ -416,7 +416,8 @@ define function, begin
 407,sortchildren,2,0,1        #sort siblings by their setsortorder value
 408,previoussibling,1,0       #return the previous sibling of a splice or 0 if none
 409,getsortorder,1,0          #get sort value for sortchildren for a slice
-
+410,getsliceextra,2,0,0       #get slice extra (0-2) data (slice, extra)
+411,setsliceextra,3,0,0,0     #set slice extra (0-2) data (slice, extra, value)
 end
 
 #--------------------------------------------------------------------------
@@ -1343,8 +1344,9 @@ define constant, begin
 1, Wrap
 2, Defaulttile
 -1,party
-1, extra 1
-2, extra 2
+0, extra 1
+1, extra 2
+2, extra 3
 0, x axis
 1, y axis
 1,mapstate:mapsettings
