@@ -85,10 +85,13 @@ WHAT IS NEW?
       "get right padding", "set bottom padding", "get bottom padding",
       "fill parent", "is filling parent", "slice to back",
       "slice to front", "Y sort children", "set sort order",
-      "get sort order", "sort children" [James]
+      "get sort order", "sort children", "set slice extra",
+      "get slice extra" [James]
     * "number from string" [James]
     * Hspeak now produces a warning message if you use [square brackets]
       or {curly braces} in script names or variable names [James]
+    * There are now 3 NPC extra data fields (0-2) accessible with
+      "set NPC extra" instead of 2
       
 
   * Vikings of Midgard
